[package]
name = "seed-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed-config = { path = "../seed-config" }
seed-core   = { path = "../seed-core" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
wasm-bindgen = "0.2"

[build]
target-dir = "../../web/pkg/"
